--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   dartz: ^0.10.1
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
+  firebase_storage: ^10.2.18
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   freezed_annotation: ^1.0.0
   json_serializable: ^6.2.0
   logger: ^1.1.0
+  rxdart: ^0.27.4
 
 dev_dependencies:
   auto_route_generator: null
