--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   another_flushbar: ^1.10.29
   auto_route: ^4.0.1
+  bubble: ^1.2.1
   cloud_firestore: ^3.1.17
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
