--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   freezed_annotation: ^1.0.0
   json_serializable: ^6.2.0
   logger: ^1.1.0
+  path_provider: ^2.0.11
   rxdart: ^0.27.4
 
 dev_dependencies:
