--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   freezed_annotation: ^1.0.0
+  image_picker: ^0.8.5+3
   json_serializable: ^6.2.0
   logger: ^1.1.0
   path_provider: ^2.0.11
