--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   logger: ^1.1.0
   path_provider: ^2.0.11
   rxdart: ^0.27.4
-
+  flutter_markdown: ^0.6.10+2
+  
 dev_dependencies:
   auto_route_generator: null
   bloc_test: ^9.0.3
