--- a/chat_app_demo/pubspec.yaml
+++ b/chat_app_demo/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   # NOTE: others
   image_picker: ^0.8.5+3
   flutter_markdown: ^0.6.10+2
-  
+  url_launcher: ^6.1.4
+
 dev_dependencies:
   auto_route_generator: null
   bloc_test: ^9.0.3
@@ -79,6 +80,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/i18n/
+    - assets/images/blank_profile_picture.png
+    - assets/others/app_introduction.md
     # - assets/i18n
     # - assets/i18n/en_US.json
     # - assets/i18n/en_US.json
